--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,25 @@
-<div style="position:fixed;right:15px;top:62px;">
-  <button id="content_btn" class="btn btn-primary" style="width:43px; height:34px;">
-    <i class="fa fa-lg fa-plus"></i>
-  </button>
-</div>
-<div style="position:fixed;right:15px;top:20px;">
-  <button id="nav_btn" class="btn btn-primary">
-    <i class="fa fa-lg fa-navicon"></i>
-  </button>
-</div>
-<script type="text/javascript" src="/public/js/jquery.js"></script>
-<script type="text/javascript" src="/public/js/bootstrap.js"></script>
-<script src="/public/js/jquery.pjax.js"></script>
-<script src="/public/js/prettify/prettify.js"></script>
-<script src="/public/js/base.js"></script>
-<!--
-<script src="/public/js/jquery.scrollUp.js"></script>
--->
+<footer class="">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <span>Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}</span>
+          <span class="point"> · </span>
+          <span>Theme by <a href="http://taominer.github.io">Ethan</a></span>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
 <script>
-    $('a[href="#{{ site.active }}"]').tab('show');
+    // only load tagcloud.js in tag.html
+    if($('#tag_cloud').length !== 0){
+        async("/public/js/jquery.tagcloud.js",function(){
+            $.fn.tagcloud.defaults = {
+                //size: {start: 1, end: 1, unit: 'em'},
+                color: {start: '#bbbbee', end: '#0085a1'},
+            };
+            $('#tag_cloud a').tagcloud();
+        })
+    }
 </script>
-
-
-<!--button是右上方导航和显示目录的按钮-->
-
