--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,16 +1,12 @@
 ---
-layout: base
+layout: default
 ---
-<div class="row">
-  <div class="col-md-13 aside3-title">
-    <br>
-    <h2 id="#identifier">{{ page.title }}</h2>
-  </div>
-  <div class="col-md-13 aside3-content">
-    <div id="page-content">
-      {{ content }}
-    </div>
+<div class="post-area post">
+    <header>
+        <h1>{{ page.title }}</h1>
+    </header>
     <hr>
-    {% include disqus.html %}
-  </div>
+    <article class="page-content">
+        {{ content }}
+    </article>
 </div>
